objects/Account.object
<CustomObject>
 <fullName>Account</fullName>
 <fields>
  <fullName>EDY_ORGCUSTOM__DB__c</fullName>
  <defaultValue>false</defaultValue>
  <label>DB</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
  <label>Old Name</label>
  <length>50</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>FN__Find_Nearby__c</fullName>
  <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , 'Located'), HYPERLINK( "apex/FN__FindNearbymap?lid=null&amp;aid=" &amp; Id,"Map it!","_parent") , HYPERLINK( "apex/FN__AGeoCode?id=" &amp; Id,"Locate Account","_parent") )</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Find Nearby</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>FN__Lat__c</fullName>
  <label>Latitude</label>
  <precision>7</precision>
  <scale>2</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>FN__Lon__c</fullName>
  <label>Longitude</label>
  <precision>7</precision>
  <scale>2</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>FN__Mapping_Status__c</fullName>
  <label>Mapping Status</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Not Located Yet</fullName>
     <default>true</default>
     <label>Not Located Yet</label>
    </value>
    <value>
     <fullName>Located</fullName>
    </value>
    <value>
     <fullName>Problem with Address</fullName>
    </value>
    <value>
     <fullName>Bad Google Key</fullName>
    </value>
    <value>
     <fullName>Google Exhausted</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>FN__Which_Address__c</fullName>
  <label>Mapping Address</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Billing</fullName>
     <default>true</default>
     <label>Billing</label>
    </value>
    <value>
     <fullName>Shipping</fullName>
    </value>
    <value>
     <fullName>Do Not Map</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>ORGCUSTOM4_DB__c</fullName>
  <defaultValue>false</defaultValue>
  <label>ORGCUSTOM4_DB</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
  <label>ORGCUSTOM4_OLD_NAME</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <listViews>
  <fullName>AllAccounts</fullName>
  <columns>ACCOUNT.NAME</columns>
  <columns>ACCOUNT.SITE</columns>
  <columns>ACCOUNT.ADDRESS1_STATE</columns>
  <columns>ACCOUNT.PHONE1</columns>
  <columns>ACCOUNT.TYPE</columns>
  <columns>CORE.USERS.ALIAS</columns>
  <filterScope>Everything</filterScope>
  <label>All Accounts</label>
 </listViews>
 <listViews>
  <fullName>MyAccounts</fullName>
  <filterScope>Mine</filterScope>
  <label>My Accounts</label>
 </listViews>
 <listViews>
  <fullName>NewThisWeek</fullName>
  <columns>ACCOUNT.NAME</columns>
  <columns>ACCOUNT.SITE</columns>
  <columns>ACCOUNT.ADDRESS1_STATE</columns>
  <columns>ACCOUNT.PHONE1</columns>
  <columns>ACCOUNT.TYPE</columns>
  <columns>CORE.USERS.ALIAS</columns>
  <filterScope>Everything</filterScope>
  <filters>
   <field>ACCOUNT.CREATED_DATE</field>
   <operation>equals</operation>
   <value>THIS_WEEK</value>
  </filters>
  <label>New This Week</label>
 </listViews>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>